[tool.poetry]
name = "yesql"
version = "0.2.0"
description = "YeSQL is a SQL-first data manipulation library that will replace your ORM."
authors = ["Sean Stewart <sean_stewart@me.com>"]
license = "MIT"
keywords = ["typing", "data", "annotations", "validation", "json-schema"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Typing :: Typed",
]


[tool.poetry.scripts]
"yesql-type-stubs" = "yesql.bin.stubgen:main"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
typical = "^2.8"
PyPika = "^0.48"
orjson = "^3"
sqlparse = "^0.4"
asyncpg = {version = "^0.27", optional = true}
psycopg = {extras = ["binary", "pool"], version = "^3.1", optional = true}

[tool.poetry.group.docs.dependencies]
mkdocs ="^1.2.2"
mkdocs-material = "^8.0"
mkdocs-awesome-pages-plugin = "^2.5.0"

[tool.poetry.group.lint.dependencies]
mypy = "^1"
black = "^23"
flake8 = "^6"
types-orjson = "^0.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^7"
pytest-asyncio = "^0.21"
pytest-cov = "^4"
pytest-benchmark = "^4"
factory-boy = "^3.2.1"

[tool.poetry.extras]
asyncpg = ["asyncpg", "orjson"]
psycopg = ["psycopg", "orjson"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
